--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGODB_URI=mongodb://localhost:27017/
+ELASTICSEARCH_HOST=localhost
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_SCHEME=http
+MONGODB_NAME=dbt1
+MONGODB_COLLECTION=colt1
 
