--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,14 @@ services:
     ports:
       - "9200:9200"
 
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.14.0
+    container_name: kibana
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+
   mongodb:
     image: mongo:3.6
     container_name: mongodb
