--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,10 @@ services:
       - DJANGO_SECRET_KEY=your-secret-key
       - ELASTICSEARCH_HOST=elasticsearch
       - ELASTICSEARCH_PORT=9200
-      - MONGO_HOST=mongodb
-      - MONGO_PORT=27017
+      - ELASTICSEARCH_SCHEME=http
+      - MONGODB_URI=mongodb://mongodb:27017/
+      - MONGODB_NAME=dbt1
+      - MONGODB_COLLECTION=colt1
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
